Fixed text alignment for no alias label in sms messages page

--- a/src/pages/SMSMessages/styles.scss
+++ b/src/pages/SMSMessages/styles.scss
@@ -34,6 +34,7 @@
     position: relative;
 
     .no-alias-label {
+      text-align: center;
       position: absolute;
       top: 40%;
       left: 50%;
